--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,12 @@
 body {
   font: 16px/1.4 sans-serif;
 }
+
+a {
+  color: #0080FF;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #8080FF;
+}
