--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,14 @@
+/* Général */
+
+html {
+  height: 100%;
+}
+
 body {
   font: 16px/1.4 sans-serif;
+  background: #313444 no-repeat fixed;
+  background-image: linear-gradient(#313444, #535362);
+  margin: 0;
 }
 
 a {
@@ -11,8 +20,112 @@ a {
   color: #888;
 }
 
-a:active {
+a:active, .liste-topics a:active {
   color: #F50;
+}
+
+h1, h2, h3 {
+  margin: 0;
+}
+
+/* Header */
+
+.header {
+  background: rgba(0,0,0,.5);
+  margin-bottom: 20px;
+  padding: 5px 20px;
+}
+
+.header h1 {
+  margin: 0;
+  color: white;
+}
+
+/* Conteneur et feuilles */
+
+.container {
+  max-width: 1400px;
+  margin: auto;
+}
+
+.sheet {
+  background: white;
+  border: solid rgba(0,0,0,.3);
+  border-width: 1px 0;
+  border-radius: 15px;
+  box-shadow: 0 -1px 10px rgba(0,0,0,.1);
+  padding: 10px 0 0;
+}
+
+.sheet-last {
+  padding: 10px 30px;
+}
+
+.sheet-title {
+  padding: 0 20px;
+  margin-bottom: 10px;
+}
+
+.sheet-last .sheet-title {
+  padding: 0;
+}
+
+.sheet-title a {
+  color: black;
+  padding: 10px;
+}
+
+.content {
+  width: calc(80% - 15px);
+  margin-right: 15px;
+  float: left;
+}
+
+.aside {
+  width: 20%;
+  float: left;
+}
+
+.aside .menu {
+  background: #ededed;
+  margin-left: 15px;
+}
+
+.aside .menu .title {
+  font-size: 1em;
+  padding: 2px 8px;
+  background: #2f4f5c;
+  background-image: linear-gradient(#2f4f5c 0, #3b6272 40%, #335462 40%, #2f4f5c 100%);
+  color: white;
+  text-transform: uppercase;
+}
+
+.aside .menu .menu-content {
+  padding: 2px 8px;
+}
+
+.clearfix {
+  clear: both;
+}
+
+/* Liste des topics */
+
+.liste-topics {
+  width: 100%;
+  border: 1px solid rgba(0,0,0,.1);
+  border-spacing: 1px;
+}
+
+.liste-topics tr {
+  background: #E9EFFA;
+}
+
+.liste-topics tr:nth-child(even) {
+  background: #f5f5f5;
+}
+
+.liste-topics .title {
+  font-weight: bold;
 }
 
 /* Dossiers sur la liste des topics */
@@ -63,10 +176,10 @@ a:active {
 
 /* Couleurs pseudos modos/admins */
 
-.status-modo {
+.pseudo-modo {
   color: #080;
 }
 
-.status-admin {
+.pseudo-admin {
   color: #c00;
 }
