--- a/public/style.css
+++ b/public/style.css
@@ -34,28 +34,12 @@ h1, h2, h3 {
   margin: 0;
 }
 
-/* Header */
-
-.header {
-  background: rgba(0,0,0,.45);
-  background: -webkit-linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.5));
-  background:         linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.5));
-  margin-bottom: 20px;
-  padding: 5px 20px;
-  border-bottom: 1px solid rgba(255,255,255,.25);
-}
-
-.header h1 {
-  margin: 0;
-  color: white;
-}
-
 /* Conteneur et feuilles */
 
 .container {
   max-width: 1400px;
   margin: auto;
-  padding: 0 10px;
+  padding: 10px;
 }
 
 .sheet {
