--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,7 @@ body {
   background-image: linear-gradient(#313444, #535362);
   margin: 0;
   overflow-y: scroll;
+  color: #333;
 }
 
 a {
@@ -76,7 +77,7 @@ h1, h2, h3 {
 }
 
 .sheet-title a {
-  color: black;
+  color: #333;
   padding: 10px;
 }
 
@@ -297,6 +298,7 @@ h1, h2, h3 {
   min-height: 80px;
   margin-bottom: 12px;
   padding: 0 .5em;
+  color: black;
 }
 
 .message .blockquote-jv {
