CSS: Plus d’espace au cas où l’avatar est trop proche du msg suivant

--- a/public/style.css
+++ b/public/style.css
@@ -287,6 +287,11 @@ h1, h2, h3 {
   color: #111;
 }
 
+.message .meta-author .avatar {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
 .message .meta-author .avatar img {
   max-width: 70px;
   max-height: 70px;
