--- a/public/style.css
+++ b/public/style.css
@@ -214,11 +214,11 @@ h1, h2, h3 {
 
 /* Couleurs pseudos modos/admins */
 
-.pseudo-modo {
+.pseudo-modo, .message .meta-author .author.pseudo-modo {
   color: #080;
 }
 
-.pseudo-admin {
+.pseudo-admin, .message .meta-author .author.pseudo-admin {
   color: #c00;
 }
 
