--- a/public/style.css
+++ b/public/style.css
@@ -315,6 +315,7 @@ h1, h2, h3 {
   margin-bottom: 12px;
   padding: 0 .5em;
   color: black;
+  word-wrap: break-word;
 }
 
 .message .blockquote-jv {
