--- a/public/style.css
+++ b/public/style.css
@@ -293,6 +293,7 @@ h1, h2, h3 {
   line-height: 1;
   margin-bottom: 2px;
   color: #111;
+  word-wrap: break-word;
 }
 
 .message .meta-author .avatar {
