--- a/public/style.css
+++ b/public/style.css
@@ -322,6 +322,7 @@ h1, h2, h3 {
 .message .edit-mention {
   font-size: .8em;
   color: rgba(0,0,0,.5);
+  letter-spacing: 1px;
 }
 
 .message .blockquote-jv {
