--- a/public/style.css
+++ b/public/style.css
@@ -397,6 +397,10 @@ h1, h2, h3 {
   margin-top: 2px;
 }
 
+.message:target {
+  background: rgba(255, 85, 0, .07);
+}
+
 /* Connexion */
 
 .form-container {
