--- a/public/style.css
+++ b/public/style.css
@@ -50,9 +50,6 @@ h1, h2, h3 {
   border-radius: 15px;
   box-shadow: 0 -1px 10px rgba(0,0,0,.1);
   padding: 0;
-}
-
-.sheet-navbar {
   position: relative;
 }
 
@@ -112,6 +109,22 @@ h1, h2, h3 {
 
 .clearfix {
   clear: both;
+}
+
+.ouvrir-jvc {
+  display: block;
+  position: absolute;
+  right: 30px;
+  border: 1px solid #ddd;
+  padding: 4px 10px;
+  border-radius: 5px;
+  top: 20px;
+  color: #333;
+}
+
+.ouvrir-jvc:hover {
+  border-color: #bbb;
+  box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
 /* Liste des topics */
