--- a/public/style.css
+++ b/public/style.css
@@ -123,7 +123,7 @@ h1, h2, h3 {
 }
 
 .ouvrir-jvc:hover {
-  border-color: #bbb;
+  border-color: #ccc;
   box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
@@ -138,13 +138,6 @@ h1, h2, h3 {
   background: #E9EFFA;
   border-left: grey 5px solid;
 }
-
-/*.liste-topics a {
-  
-  display: block;
-  display: table;
-  width: 100%;
-}*/
 
 .topic:nth-child(even) {
   background: #f5f5f5;
