--- a/public/style.css
+++ b/public/style.css
@@ -11,11 +11,16 @@ html {
 
 body {
   font: 16px/1.4 sans-serif;
-  background: #535362 no-repeat;
-  background-image: linear-gradient(#313444, #535362);
   margin: 0;
   overflow-y: scroll;
   color: #333;
+}
+
+@media (min-width: 1025px) {
+  body {
+    background: #535362 no-repeat;
+    background-image: linear-gradient(#313444, #535362);
+  }
 }
 
 a {
@@ -38,9 +43,14 @@ h1, h2, h3 {
 /* Conteneur et feuilles */
 
 .container {
-  max-width: 1400px;
-  margin: auto;
-  padding: 10px;
+}
+
+@media (min-width: 1025px) {
+  .container {
+    max-width: 1400px;
+    margin: auto;
+    padding: 10px;
+  }
 }
 
 .sheet {
@@ -53,6 +63,14 @@ h1, h2, h3 {
   position: relative;
 }
 
+@media (max-width: 1024px) {
+  .sheet-first {
+    border-radius: 0;
+    border: 0;
+    box-shadow: none;
+  }
+}
+
 .sheet-navbar .login-link {
   position: absolute;
   right: 20px;
@@ -60,11 +78,23 @@ h1, h2, h3 {
 }
 
 .sheet-last .sheet-navbar .login-link {
-  top: 20px;
+  top: 21px;
+}
+
+@media (min-width: 1025px) {
+  .sheet-last .sheet-navbar .login-link {
+    top: 26px;
+  }
 }
 
 .sheet-last {
-  padding: 10px 30px;
+  padding: 10px;
+}
+
+@media (min-width: 1025px) {
+  .sheet-last {
+    padding: 10px 30px;
+  }
 }
 
 .sheet-title {
@@ -74,12 +104,24 @@ h1, h2, h3 {
 
 .sheet-last .sheet-title {
   padding: 0;
-  margin: 5px 0 10px;
+  margin: 0;
+}
+
+@media (min-width: 1025px) {
+  .sheet-last .sheet-title {
+    padding: 0;
+    margin: 5px 0 10px;
+  }
 }
 
 .sheet-title a {
   color: #333;
-  padding: 10px;
+}
+
+@media (min-width: 1025px) {
+  .sheet-title a {
+    padding: 10px;
+  }
 }
 
 .sheet > .content {
