--- a/public/style.css
+++ b/public/style.css
@@ -73,8 +73,15 @@ h1, h2, h3 {
 
 .sheet-navbar .login-link {
   position: absolute;
-  right: 20px;
-  top: 10px;
+  right: 10px;
+  top: 5px;
+}
+
+@media (min-width: 1025px) {
+  .sheet-navbar .login-link {
+    right: 20px;
+    top: 10px;
+  }
 }
 
 .sheet-last .sheet-navbar .login-link {
@@ -88,7 +95,8 @@ h1, h2, h3 {
 }
 
 .sheet-last {
-  padding: 10px;
+  padding: 5px 10px 10px;
+  overflow: auto;
 }
 
 @media (min-width: 1025px) {
@@ -98,8 +106,15 @@ h1, h2, h3 {
 }
 
 .sheet-title {
-  padding: 0 20px;
+  padding: 0 10px;
   margin: 5px 0;
+}
+
+@media (min-width: 1025px) {
+  .sheet-title {
+    padding: 0 20px;
+    margin: 5px 0;
+  }
 }
 
 .sheet-last .sheet-title {
@@ -125,9 +140,25 @@ h1, h2, h3 {
 }
 
 .sheet > .content {
-  width: calc(80% - 15px);
-  margin-right: 15px;
-  float: left;
+}
+
+@media (min-width: 1025px) {
+  .sheet > .content {
+    width: calc(80% - 15px);
+    margin-right: 15px;
+    float: left;
+  }
+
+  .sheet > .content.no-menu {
+    width: initial;
+    margin-right: initial;
+    float: initial;
+  }
+  
+  .sheet > .content.login-fake-table {
+    display: table;
+    width: 100%;
+  }
 }
 
 /* Menu */
@@ -508,8 +539,14 @@ h1, h2, h3 {
 /* Connexion */
 
 .form-container {
-  padding: 0 60px 0 10px;
-  float: left;
+
+}
+
+@media (min-width: 1025px) {
+  .form-container {
+    padding-left: 10px;
+    display: table-cell;
+  }
 }
 
 .input {
@@ -518,6 +555,13 @@ h1, h2, h3 {
   border-radius: 1px;
   padding: 2px 5px;
   font-family: sans-serif;
+  width: 100%;
+}
+
+@media (min-width: 1025px) {
+  .input {
+    width: initial;
+  }
 }
 
 .input:focus {
@@ -547,9 +591,27 @@ h1, h2, h3 {
   width: 240px;
 }
 
-.aside-form {
-  float: left;
-  width: 450px;
+.why-respeed {
+  text-align: center;
+}
+
+@media (min-width: 1025px) {
+  .why-respeed {
+    display: table-cell;
+    vertical-align: top;
+    width: 60%;
+  }
+}
+
+.why-respeed div {
+  font-size: 14px;
+  border: 1px solid rgba(0,0,0,.3);
+  border-radius: 10px;
+  padding: 10px;
+  background: #E7E6EC;
+  box-shadow: 0px 2px 5px rgba(0,0,0,.1), inset 0 1px 0 rgba(255,255,255,.3);
+  display: inline-block;
+  text-align: initial;
 }
 
 /* Formulaire de post */
