--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,7 @@ h1, h2, h3 {
 }
 
 /* Header */
+
 .site-header {
   display: table;
   width: 100%;
@@ -54,7 +55,8 @@ h1, h2, h3 {
 
 @media (min-width: 1025px) {
   .site-header {
-    max-width: 1400px;
+    max-width: 1420px;
+    margin: auto;
     padding: 0 10px;
   }
 }
