--- a/public/style.css
+++ b/public/style.css
@@ -544,6 +544,17 @@ h1, h2, h3 {
   color: #9c0;
 }
 
+@media (max-width: 1024px) {
+  h2.forum-title {
+    font-size: 1.17em;
+    padding: 0 10px;
+  }
+  
+  .topic-title {
+    font-size: 1.5em;
+  }
+}
+
 /* Liste des pages */
 
 .pages {
@@ -657,7 +668,6 @@ h1, h2, h3 {
   .message-header {
     display: initial;
     padding-top: initial;
-    border-bottom: initial;
   }
 }
 
@@ -704,6 +714,7 @@ h1, h2, h3 {
 
 @media (min-width: 1025px) {
   .message .meta-author .avatar {
+    display: inline-block;
     margin-bottom: 5px;
   }
 }
@@ -724,6 +735,7 @@ h1, h2, h3 {
   max-width: 40px;
   max-height: 40px;
   vertical-align: middle;
+  border-radius: 2px;
 }
 
 @media (min-width: 1025px) {
@@ -746,12 +758,14 @@ h1, h2, h3 {
 
 .message-border {
   border-bottom: 1px dotted #444;
+  border-color: rgba(0,0,0,.4);
   width: calc(100% - 10px);
   margin: auto;
 }
 
 .message .content {
   padding: 0 10px;
+  word-wrap: break-word;
 }
 
 @media (min-width: 1025px) {
@@ -763,7 +777,6 @@ h1, h2, h3 {
     margin-bottom: 12px;
     padding: 0 .5em;
     color: black;
-    word-wrap: break-word;
   }
 }
 
