--- a/public/style.css
+++ b/public/style.css
@@ -675,6 +675,8 @@ h1, h2, h3 {
   width: 100%;
 }
 
+/* Message - author */
+
 @media (min-width: 1025px) {
   .message-header {
     display: initial;
@@ -767,12 +769,75 @@ h1, h2, h3 {
   display: inline-block;
 }
 
+/* Message - actions */
+
+.message .meta-actions {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: right;
+}
+
+@media (min-width: 1025px) {
+  .message .meta-actions {
+    display: initial;
+    text-align: initial;
+
+    width: 8.5%;
+    margin-left: 1.5%;
+    float: right;
+    overflow: hidden;
+    margin-bottom: 12px;
+  }
+}
+
+.message .meta-actions span {
+}
+
+@media (min-width: 1025px) {
+  .message .meta-actions span {
+    display: block;
+    padding: 1px 0;
+  }
+}
+
+.message .meta-actions span, .ignored-message span {
+}
+
+@media (min-width: 1025px) {
+  .message .meta-actions span, .ignored-message span {
+    cursor: pointer;
+    font-size: 12px;
+  }
+}
+
+.message .meta-actions span:hover, .ignored-message span:hover {
+}
+
+@media (min-width: 1025px) {
+  .message .meta-actions span:hover, .ignored-message span:hover {
+    color: #111;
+  }
+}
+
+.message .meta-actions .meta-permalink {
+}
+
+@media (min-width: 1025px) {
+  .message .meta-actions .meta-permalink {
+    white-space: nowrap;
+  }
+}
+
+/* Message - border */
+
 .message-border {
   border-bottom: 1px dotted #444;
   border-color: rgba(0,0,0,.4);
   width: calc(100% - 10px);
   margin: auto;
 }
+
+/* Message - content */
 
 .message .content {
   padding: 0 10px;
@@ -836,63 +901,6 @@ h1, h2, h3 {
   .message.even .content {
     background: #EFF4FC;
     border-color: #C0D7ED;
-  }
-}
-
-.message .meta-actions {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: right;
-}
-
-@media (min-width: 1025px) {
-  .message .meta-actions {
-    display: initial;
-    text-align: initial;
-
-    width: 8.5%;
-    margin-left: 1.5%;
-    float: right;
-    overflow: hidden;
-    margin-bottom: 12px;
-  }
-}
-
-.message .meta-actions span {
-}
-
-@media (min-width: 1025px) {
-  .message .meta-actions span {
-    display: block;
-    padding: 1px 0;
-  }
-}
-
-.message .meta-actions span, .ignored-message span {
-}
-
-@media (min-width: 1025px) {
-  .message .meta-actions span, .ignored-message span {
-    cursor: pointer;
-    font-size: 12px;
-  }
-}
-
-.message .meta-actions span:hover, .ignored-message span:hover {
-}
-
-@media (min-width: 1025px) {
-  .message .meta-actions span:hover, .ignored-message span:hover {
-    color: #111;
-  }
-}
-
-.message .meta-actions .meta-permalink {
-}
-
-@media (min-width: 1025px) {
-  .message .meta-actions .meta-permalink {
-    white-space: nowrap;
   }
 }
 
