--- a/public/style.css
+++ b/public/style.css
@@ -884,12 +884,24 @@ h1, h2, h3 {
 .message .blockquote-jv {
   margin: 1em 0;
   border-left: 4px solid rgba(0,0,64,.4);
-  padding: 1px 5px;
+  padding: 1px 6px;
   background: rgba(0,0,64,.025);
 }
 
 .message .content > .blockquote-jv {
-  font-size: 95%;
+  _font-size: 95%;
+  margin-left: -10px;
+  margin-right: -10px;
+  padding-right: 10px;
+}
+
+@media (min-width: 1025px) {
+  .message .content > .blockquote-jv {
+    font-size: 95%;
+    margin-left: -8px;
+    margin-right: -7px;
+    padding-right: .5em;
+  }
 }
 
 .message .blockquote-jv > p {
