--- a/public/style.css
+++ b/public/style.css
@@ -998,14 +998,16 @@ h1, h2, h3 {
 
 .message.ignored .ignored-message {
   display: block;
+  line-height: 24px;
+  padding: 0 10px;
 }
 
 @media (min-width: 1025px) {
   .message.ignored .ignored-message {
+    padding: 0 .5em;
     border: 1px solid #d1d1d1;
     background: #F9F9F9;
     margin-bottom: 12px;
-    padding: 0 .5em;
     width: 80%;
     margin-left: 10%;
   }
@@ -1022,11 +1024,20 @@ h1, h2, h3 {
 }
 
 .message.ignored .ignored-message .meta-unignore {
+  float: right;
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+  background-image: url(http://cdn.jvforum.fr/ic_visibility_24px.svg?);
+  color: transparent;
 }
 
 @media (min-width: 1025px) {
   .message.ignored .ignored-message .meta-unignore {
-    float: right;
+    width: initial;
+    height: initial;
+    background-image: initial;
+
     margin-top: 2px;
   }
 }
